<resources>
    <string name="app_name">Capstone Project</string>
    <string name="title_activity_main">Nearby</string>
    <string name="title_activity_map">Map</string>
    <string name="current_position">Current position</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_incorrect_credentials">Username or password is incorrect</string>
    <string name="error_signup_failure">Could not register new user</string>
    <string name="place_search_hint">Type in an address or location name</string>
    <string name="content_undefined">undefined</string>
    <string name="day_closed">CLOSED</string>
    <string name="label_edit">edit</string>

    <string name="label_sunday">Sunday</string>
    <string name="label_monday">Monday</string>
    <string name="label_thursday">Thursday</string>
    <string name="label_wednesday">Wednesday</string>
    <string name="label_tuesday">Tuesday</string>
    <string name="label_friday">Friday</string>
    <string name="label_saturday">Saturday</string>

    <string name="edit_place_save">Save</string>

    <string name="amenity_animal_friendly">Animal friendly</string>
    <string name="amenity_disabled_people">Facilities for disabled people</string>
    <string name="amenity_door_delivery">Does door delivery</string>
    <string name="open_close_hour_weekday_format">%s - %s</string>
    <string name="label_place_details">Details</string>
    <string name="place_detail_header_check_fields">Ammenities</string>
    <string name="place_detail_header_weekday_times_fields">Schedule</string>
    <string name="action_edit_place_entry">edit</string>
    <string name="action_edit_place_save">save</string>
    <string name="appwidget_empty_intruction_text">Select a place in the main app to see its description and address in this widget</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_place_address">drugstore address</string>
    <string name="appwidget_place_name">drugstrore name</string>
    <string name="appwidget_place_phone_number">drugstrore phone number</string>
    <string name="appwidget_interation_hint">tap anywhere to open details</string>
    <string name="appwidget_text_undefined">undefined</string>
    <string name="appwidget_label_address">Address</string>
    <string name="appwidget_label_phone_number">Phone Number</string>

</resources>
